validation , visitor 점수 기능